--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
     "version": "1.0",
     "manifest_version": 3,
 
+    "host_permissions": ["*://www.duolingo.com/*", "*://duolingo.com/*", "https://www.duolingo.com/lesson/unit/2/level/10"],
     "permissions": [
         "activeTab",
         "scripting",
